; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_if.c_pfi_kif_match.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_if.c_pfi_kif_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pfi_kif = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pfi_kif_match(%struct.pfi_kif* %0, %struct.pfi_kif* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pfi_kif*, align 8
  %5 = alloca %struct.pfi_kif*, align 8
  store %struct.pfi_kif* %0, %struct.pfi_kif** %4, align 8
  store %struct.pfi_kif* %1, %struct.pfi_kif** %5, align 8
  %6 = load %struct.pfi_kif*, %struct.pfi_kif** %4, align 8
  %7 = icmp eq %struct.pfi_kif* %6, null
  br i1 %7, label %12, label %8

8:                                                ; preds = %2
  %9 = load %struct.pfi_kif*, %struct.pfi_kif** %4, align 8
  %10 = load %struct.pfi_kif*, %struct.pfi_kif** %5, align 8
  %11 = icmp eq %struct.pfi_kif* %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %8, %2
  store i32 1, i32* %3, align 4
  br label %14

13:                                               ; preds = %8
  store i32 0, i32* %3, align 4
  br label %14

14:                                               ; preds = %13, %12
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
